--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -6,4 +6,7 @@
     .dashboard{
         @apply sm:ml-[256px] h-auto;
     }
+    .textareaStyle{
+       @apply resize-none block w-full px-2 pl-3 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset outline-none focus:ring-[#18386B] sm:text-sm sm:leading-6
+    }
 }
